--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT = '5000'
 MONGODB = 'mongodb+srv://phungdinhhung:1TYNvqUvN3N4ISPa@reas.wgnuvkb.mongodb.net/reas?retryWrites=true&w=majority'
 JWT_ACCESS_KEY='capstone1AccessToken'
 JWT_REFRESHTOKEN_KEY='capstone1RefreshToken'
+
+CLOUDINARY_API_KEY="397323441118375"
+CLOUDINARY_API_SECRET="LSVxwgL3eDjxfC3UMM9xciHbGgI"
+CLOUDINARY_NAME="dpgo6wzwn"
