--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = '5000'
-MONGODB = 'mongodb+srv://phungdinhhung:1TYNvqUvN3N4ISPa@reas.wgnuvkb.mongodb.net/reas?retryWrites=true&w=majority'
+MONGODB = 'mongodb://phungdinhhung:1TYNvqUvN3N4ISPa@ac-3awyvbc-shard-00-00.wgnuvkb.mongodb.net:27017,ac-3awyvbc-shard-00-01.wgnuvkb.mongodb.net:27017,ac-3awyvbc-shard-00-02.wgnuvkb.mongodb.net:27017/?ssl=true&replicaSet=atlas-4gia4f-shard-0&authSource=admin&retryWrites=true&w=majority'
 JWT_ACCESS_KEY='capstone1AccessToken'
 JWT_REFRESHTOKEN_KEY='capstone1RefreshToken'
 
