--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
    "liveServer.settings.port": 5501,
-   "editor.formatOnSave": true
-   // "editor.defaultFormatter": "esbenp.prettier-vscode"
+   "editor.formatOnSave": true,
+   "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
