--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ JWT_REFRESHTOKEN_KEY='capstone1RefreshToken'
 CLOUDINARY_API_KEY="397323441118375"
 CLOUDINARY_API_SECRET="LSVxwgL3eDjxfC3UMM9xciHbGgI"
 CLOUDINARY_NAME="dpgo6wzwn"
+
+EMAILUSER = "reasproject@gmail.com"
+EMAILPASSWORD = "ecgxiltmrlxskmpr"
