--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "pusher": "^5.1.1-beta"
+    "nodemailer": "^6.8.0",
+    "pusher": "^5.1.1-beta",
+    "randomstring": "^1.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
